--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "raftlabs",
   "version": "1.0.0",
-  "main": "dist/app.js",
+  "main": "build/app.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "npx tsc && node build/app.js",
@@ -11,14 +12,21 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@types/jsonwebtoken": "^9.0.7",
+    "@types/socket.io": "^3.0.2",
+    "apollo-server-express": "^3.13.0",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2",
+    "express": "^4.21.1",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.4",
-    "nodemon": "^3.1.7"
+    "nodemon": "^3.1.7",
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/body-parser": "^1.19.5",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
