--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
-    "module": "commonjs",
-    "target": "es2016",
+    "module": "es2022",
+    "target": "es2017",
     "moduleResolution": "node",
     "sourceMap": true,
     "rootDir": "src",
